--- a/assets/pubs/conf.bib
+++ b/assets/pubs/conf.bib
@@ -10,6 +10,14 @@
 @string{CCS       = {ACM Conference on Computer and Communications Security (CCS)}}
 @string{BLACKHAT  = {Black Hat USA Briefings (Black Hat USA)}}
 @string{WISA      = {International Workshop on Information Security Applications (WISA)}}
+@string{NDSS      = { Annual Network and Distributed System Security Symposium (NDSS)}}
+
+@Proceedings{NDSS21,
+  title       = POT # { 2021 } # NDSS,
+  booktitle   = POT # { 2021 } # NDSS,
+  month       = feb,
+  year        = 2021,
+}
 
 @Proceedings{SEC21,
   title       = POT # { 30th } # SEC,
