--- a/assets/pubs/pub.bib
+++ b/assets/pubs/pub.bib
@@ -1,7 +1,14 @@
+%% 2021
 @InProceedings{wickman:ffmalloc,
   title         = {{Preventing Use-After-Free Attacks with Fast Forward Allocation (to appear)}},
   author        = {Brian Wickman and Hong Hu and Insu Yun and Daehee Jang and JungWon Lim and Sanidhya Kashyap and Taesoo Kim},
   crossref      = {SEC21},
+}
+
+@InProceedings{kim:basespec,
+  title         = {{BaseSpec: Comparative Analysis of Baseband Software and Cellular (to appear)}},
+  author        = {Eunsoo Kim* and Dongkwan Kim* and Cheoljun Park and Insu Yun and Yongdae Kim},
+  crossref      = {NDSS21},
 }
 
 %% 2020
