--- a/content/publication/kim-basespec/cite.bib
+++ b/content/publication/kim-basespec/cite.bib
@@ -1,9 +1,9 @@
 @proceedings{kim:basespec,
- address = {},
  author = {Eunsoo Kim* and Dongkwan Kim* and Cheoljun Park and Insu Yun and Yongdae Kim},
  booktitle = {Proceedings of the 2021  Annual Network and Distributed System Security Symposium (NDSS)},
  month = {February},
- title = {{BaseSpec: Comparative Analysis of Baseband Software and Cellular (to appear)}},
+ title = {{BaseSpec: Comparative Analysis of Baseband Software and Cellular Specifications for L3 Protocols}},
+ www-git = {https://github.com/SysSec-KAIST/BaseSpec},
  year = {2021}
 }
 
